# cocsim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  requirements.txt
assets/: api_wasm-CdZSC9Ae.js  api_wasm-DFsykzzv.js  api_wasm-DIOllt41.js  api_wasm_bg-BLEoRyut.wasm  api_wasm_bg-CBy1Rkmc.wasm  api_wasm_bg-dugnOBaB.wasm  index-B8Pik-Si.js  index-CXke_seK.js  index-Dil_m08o.css  index-HAUAUXQc.js  index-gLChnBuR.js  workerHelpers-Cn_e3MDE.js  workerHelpers-DJkty8ID.js  workerHelpers-GCnrfyyL.js
backend/: .gitignore  Cargo.toml  rustfmt.toml
backend/api_base/: Cargo.toml
backend/api_base/src/: lib.rs
backend/api_base/src/api/: compose_base_images.rs  get_game_types.rs  get_showcase_attack.rs  get_showcase_attack_base_image.rs  mod.rs  optimize_attack.rs  reverse_projection.rs
backend/api_wasm/: Cargo.toml
backend/api_wasm/src/: lib.rs
backend/cocsim/: .gitignore  Cargo.toml  README.md
backend/cocsim-fuzz-target/: Cargo.toml  README.md
backend/cocsim-fuzz-target/src/: main.rs
backend/cocsim/benches/: attack_optimizer.rs  bench_1.rs
backend/cocsim/fuzz/: .gitignore  Cargo.toml
backend/cocsim/fuzz/fuzz_targets/: fuzz.rs
backend/cocsim/src/: consts.rs  entity_behaviour.rs  game.rs  level_index.rs  lib.rs  map.rs  pathfinder.rs  shape.rs  shapes.rs  test_maps.rs  usize_with_max.rs  utils.rs  with_housing_space.rs
backend/cocsim/src/attack_optimizer/: army.rs  attack_plan.rs  attack_plan_execution_stats.rs  attack_plan_executor.rs  attack_plan_spell.rs  attack_plan_unit.rs  attack_plan_unit_group.rs  derivative_attack_optimizer.rs  execute_attack_plan_no_rayon.rs  execute_attack_plan_rayon.rs  genetic_attack_optimizer.rs  mod.rs  random_attack_optimizer.rs  simulated_annealing_attack_optimizer.rs
backend/cocsim/src/attack_optimizer/geometry/: mod.rs  ray.rs  segment.rs  square.rs
backend/cocsim/src/attack_optimizer/v1/: attack_plan.rs  attack_plan_spell_group.rs  attack_plan_unit_group.rs  genetic_attack_optimizer.rs  mod.rs  random_attack_optimizer.rs  simulated_annealing_attack_optimizer.rs
backend/cocsim/src/attack_optimizer/v2/: attack_plan.rs  mod.rs  random_attack_optimizer.rs  simulated_annealing_attack_optimizer.rs
backend/cocsim/src/attack_optimizer/v3/: attack_plan.rs  attack_plan_spell_group.rs  attack_plan_unit_group.rs  mod.rs
backend/cocsim/src/buildings/: air_bomb.rs  air_defense.rs  air_sweeper.rs  archer_tower.rs  army_camp.rs  barracks.rs  bomb_tower.rs  builders_hut.rs  building.rs  building_data.rs  building_model.rs  building_option.rs  building_type.rs  cannon.rs  clan_castle.rs  dark_elixir_drill.rs  dark_elixir_storage.rs  elixir_collector.rs  elixir_storage.rs  goblin_hut.rs  gold_mine.rs  gold_storage.rs  hidden_tesla.rs  laboratory.rs  mod.rs  mortar.rs  passive_building.rs  seeking_air_mine.rs  town_hall.rs  wall.rs  wizard_tower.rs  x_bow.rs
backend/cocsim/src/buildings/colliders/: collider.rs  list_collider.rs  mod.rs  rect_collider.rs
backend/cocsim/src/buildings/utils/: active_building.rs  defensive_building.rs  mod.rs  other_building.rs  passive_building.rs  resource_building.rs  trap.rs
backend/cocsim/src/colliders/: circle_collider.rs  collider.rs  list_collider.rs  mod.rs  point_collider.rs  rect_collider.rs
backend/cocsim/src/game/: mod.rs
backend/cocsim/src/game/features/: attack.rs  attack_collision.rs  buildings.rs  clan_castle.rs  collision.rs  created.rs  damage.rs  delay.rs  drawable.rs  events.rs  health.rs  map.rs  map_size.rs  mod.rs  mover.rs  pathfinding.rs  position.rs  rng.rs  speed.rs  stunned.rs  team.rs  tick_spell.rs  time.rs  to_be_deleted.rs  to_be_despawned.rs  trapped.rs  unit.rs  units.rs  wall.rs  waypoint_mover.rs
backend/cocsim/src/game/features/actions/: air_sweeper_attack.rs  air_unit_find_target.rs  building_find_target.rs  delayed.rs  empty_action.rs  melee_attack.rs  mod.rs  splash_damage.rs  splash_projectile_attack.rs  target_projectile_attack.rs  with_delay.rs  with_despawn.rs
backend/cocsim/src/game/features/attack/: mod.rs
backend/cocsim/src/game/features/attack/attack_behaviour/: melee_attack_behaviour.rs  mod.rs  splash_projectile_attack_behaviour.rs  target_projectile_attack_behaviour.rs
backend/cocsim/src/game/features/attack/find_target_behaviour/: air_unit_find_target_behaviour.rs  building_find_target_behaviour.rs  mod.rs
backend/cocsim/src/game/features/attack/targeting/: air_unit.rs  building.rs  mod.rs
backend/cocsim/src/game/features/collision/: mod.rs
backend/cocsim/src/game/features/collision/colliders/: collider.rs  list_collider.rs  rect_collider.rs
backend/cocsim/src/game/features/projectiles/: air_sweeper_projectile.rs  mod.rs  splash_projectile.rs  target_projectile.rs
backend/cocsim/src/game/features/targeting/: air_unit.rs  building.rs  mod.rs
backend/cocsim/src/geometry/: mod.rs  ray.rs  rect.rs  segment.rs
backend/cocsim/src/spells/: haste_spell.rs  healing_spell.rs  lightning_spell.rs  mod.rs  rage_spell.rs  utils.rs
backend/cocsim/src/units/: balloon.rs  dragon.rs  mod.rs
backend/cocsim/src/units/utils/: air_unit.rs  mod.rs
backend/cocsim_fuzz/: Cargo.toml  README.md
backend/cocsim_fuzz/fuzz_targets/: fuzz_game.rs  fuzz_validate.rs
backend/compose_base_images/: Cargo.toml  README.md
backend/compose_base_images/examples/: compose_base_images.rs
backend/compose_base_images/src/: lib.rs  main.rs  raster_stolen_functions.rs  utils.rs
backend/showcase/: Cargo.toml  README.md
backend/showcase/src/: attack_optimizer.rs  consts.rs  main.rs  simple.rs  utils.rs
backend/showcase/src/math/: nearest_point_on_arc.rs
backend/webserver/: Cargo.toml  README.md
backend/webserver/src/: consts.rs  dto_game_renderer.rs  main.rs  utils.rs  webserver_error.rs
backend/webserver/src/api/: compose_base_images.rs  get_building_types.rs  get_game_types.rs  get_showcase_attack.rs  get_showcase_attack_base_image.rs  get_spell_types.rs  get_unit_types.rs  mod.rs  optimize_attack.rs  reverse_projection.rs
cocsim/: __init__.py  __main__.py  consts.py  dto_game_renderer.py  game.py  game_gui.py  (+8 more)
(+163 files in other folders)
