[package]
name = "api_base"
version = "0.1.0"
edition = "2024"

[features]
rayon = ["cocsim/rayon", "compose_base_images/rayon", "image/rayon"]

[dependencies]
anyhow = "1"
bytes = "1.10"
cocsim = { path = "../cocsim", features = ["test-maps"] }
compose_base_images = { path = "../compose_base_images" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
inventory = "0.3"
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
