[package]
name = "api_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api_base = { path = "../api_base" }
bytes = "1.10"
console_error_panic_hook = "0.1"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag"] }
