[package]
name = "api_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
api_base = { path = "../api_base", features = ["rayon"] }
bytes = "1.10"
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color"] }
log = "0.4"
rayon = "1.11"
serde_json = "1"
tokio = { version = "1.46", features = ["sync", "macros"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1.3"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag"] }
