[package]
name = "cocsim"
version = "0.1.0"
edition = "2024"

[features]
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
bitflags = "2.9"
enum_dispatch = "0.3"
inventory = "0.3"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rand = "0.9"
rand_pcg = "0.9"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14"
shipyard = { version = "0.8", default-features = false, features = ["proc", "std"] }
zip = "4.3"
