[package]
name = "cocsim"
version = "0.1.0"
edition = "2024"

[features]
rayon = ["dep:rayon"]
test-maps = ["dep:zip"]

[dependencies]
anyhow = "1"
anymap = "0.12"
arbitrary = { version = "1", features = ["derive"] }
bitflags = "2.9"
dyn-clone = "1"
enum_dispatch = "0.3"
hecs = "0.10"
inventory = "0.3"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rand = "0.9"
rand_pcg = "0.9"
rayon = { version = "1.10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14"
zip = { version = "4.3", optional = true }

[dev-dependencies]
criterion = { version = "0.7" }

[[bench]]
name = "attack_optimizer"
harness = false
