[package]
name = "showcase"
version = "0.1.0"
edition = "2024"

[features]
rayon = ["cocsim/rayon", "image/rayon"]

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "attack-optimizer"
path = "src/attack_optimizer.rs"

[[bin]]
name = "nearest-point-on-arc"
path = "src/math/nearest_point_on_arc.rs"

[dependencies]
cocsim = { path = "../cocsim", features = ["test-maps"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
macroquad = "0.4"
nalgebra = "0.33"
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9"
