[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
bytes = "1.10"
cocsim = { path = "../cocsim" }
compose_base_images = { path = "../compose_base_images" }
image = "0.25"
inventory = "0.3"
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = "0.3"
