[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[features]
publish = []

[dependencies]
anyhow = "1"
api_base = { path = "../api_base", features = ["rayon"] }
axum = { version = "0.8", features = ["multipart", "ws"] }
bytes = "1.10"
log = "0.4"
serde_json = "1"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = "0.3"
